# parrot-cpp-extra

./: .gitignore  README.md
flowchart/: visualize_parrot_complete.py
profiling/: CMakeLists.txt
profiling/aresdb_expand/: README.md  aresdb_types.hpp  expand.cu  expand_parrot.cu  expand_parrot_cu  expand_thrust_cu
profiling/check_order/: check_order_cupy.py  check_order_cupy_fuse.py  check_order_jax.py  check_order_jax_jit.py  check_order_numpy.py  check_order_pytorch.py  check_order_pytorch_compile.py  check_order_pytorch_jit.py  check_order_tf.py  check_order_tf_jit.py  parrot.cu  thrust.cu
profiling/outer_sum/: outer_sum  outer_sum.cu  outer_sum_basic_cu  outer_sum_cupy.py  outer_sum_jax.py  outer_sum_jax_jit.py  outer_sum_pytorch.py  outer_sum_pytorch_jit.py  outer_sum_tf.py  outer_sum_tf_function.py  outer_sum_thrust.cu  test_outer_optimized  test_simple
profiling/paddle_mode/: paddle_mode_basic_cu  paddle_paddle_mode.cpp  paddle_paddle_mode.cu  parrot_mode.cu  parrot_mode_cu
profiling/running_avg/: parrot_cu  running_avg.cu  running_avg_cupy.py  running_avg_jax.py  running_avg_jax_jit.py  running_avg_pytorch.py  running_avg_pytorch_jit.py  running_avg_tf.py  running_avg_tf_jit.py  running_avg_thrust.cu  thrust_cu
profiling/sf2/: sf2_parrot_cpp_cu.cu  sf2_parrot_cu
profiling/softmax/: parrot_cu  softmax.cu  softmax_cupy.py  softmax_cupy_fuse.py  softmax_jax.py  softmax_jax_jit.py  softmax_pytorch.py  softmax_pytorch_compile.py  softmax_pytorch_compile_optimized.py  softmax_pytorch_jit.py  softmax_tf.py  softmax_tf_jit.py  softmax_thrust.cu  thrust_cu
profiling/softmax_100/: arrayfire.cu  codfns_apl_cu  jax.py  jax_jit.py  parrot.cu  parrot_cu  pytorch_jit.py  requirements.txt  softmax_arrayfire  softmax_cupy.py  softmax_cupy_fuse.py  softmax_pytorch.py  softmax_pytorch_compile_optimized.py  softmax_tf.py  softmax_tf_jit.py  thrust.cu  thrust_cu
